# sjtu-ai

./: .env  __init__.py  dockerfile  generate_openapi.py  openapi copy.yaml  openapi.yaml  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  config.py
app/api/: __init__.py  api.py  book.py  login.py  room.py  user.py
app/models/: schemas.py
